# typescope

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit-format-check.yml  test.yml
src/typescope/: __init__.py  _assignability.py  _assignability_config.py
src/typescope/typing/: __init__.py  inspectors.py  types.py
tests/: test_is_assignable.py
tests/test_is_assignable/: __init__.py  test_builtin_generic_types.py  test_builtin_nongeneric_types.py
